@@ -34,6 +34,7 @@ CHANGELOG
 
 * Allow server host to capture pages (fixes #733)
 * Adjust map capture according to geometry aspect ratio (fixes #627)
+* Always show path layer in detail pages (fixes #781)
 
 
 0.19.1 (2013-07-15)
